# StorkeAggregator-fitting

./: .gitignore  CMakeLists.txt  README.md  cv.cpp  cv.hpp  fitting.cpp  fitting.hpp  main.cpp  mls.cpp  polyline.cpp  polyline.hpp  polyline_extraction.cpp  stroke_orientation.cpp  tangent_optimization.cpp  tree.cpp  tree.hpp  util.cpp
